# goit-web-hm-08

part_1/: cache.py  docker-compose.yml  models.py  pyproject.toml  seed.py
part_2/: consumer_email.py  consumer_sms.py  docker-compose.yml  models.py  producer.py  pyproject.toml
